fixed cutoff on form and removed contact link

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@
   }
 
   .HeroContainer {
-    width: 92%;
+    width: 92vw;
     height: 100%;
     min-height: 80vh;
     overflow: auto;
