--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -75,7 +75,7 @@
     margin-left: 15%;
     border-radius: 25px;
     border: 2px solid #20f0923e;
-    width: 500px;
+    width: 70%;
     margin-top: 2em;
     grid-column: 2;
     display: flex;
